test/Serialization/load-invalid-arch.code

// RUN: %empty-directory(%t)
// RUN: mkdir %t/new_module.codemodule
// RUN: touch %t/new_module.codemodule/i387.codemodule
// RUN: touch %t/new_module.codemodule/ppc65.codemodule
// RUN: touch %t/new_module.codemodule/i387.codedoc
// RUN: touch %t/new_module.codemodule/ppc65.codedoc
// RUN: not %target-language-frontend %s -typecheck -I %t -show-diagnostics-after-fatal 2>&1 | %FileCheck %s -check-prefix=CHECK -check-prefix CHECK-ALL -DTARGET_ARCHITECTURE=%module-target-triple

// RUN: %empty-directory(%t)
// RUN: mkdir -p %t/new_module.framework/Modules/new_module.codemodule/
// RUN: touch %t/new_module.framework/Modules/new_module.codemodule/i387.codemodule
// RUN: touch %t/new_module.framework/Modules/new_module.codemodule/ppc65.codemodule
// RUN: not %target-language-frontend %s -F %t -typecheck -show-diagnostics-after-fatal 2>&1 | %FileCheck %s -check-prefix=CHECK -check-prefix CHECK-ALL -DTARGET_ARCHITECTURE=%module-target-triple

// RUN: %empty-directory(%t)
// RUN: mkdir %t/new_module.codemodule
// RUN: not %target-language-frontend %s -typecheck -I %t -show-diagnostics-after-fatal 2>&1 | %FileCheck %s -check-prefix CHECK-ALL -DTARGET_ARCHITECTURE=%target

// CHECK-ALL-NOT: error:
// CHECK: {{.*}} error: could not find module 'new_module' for target '[[TARGET_ARCHITECTURE]]'; found: {{ppc65, i387|i387, ppc65}}, at: {{.*}}new_module.codemodule
// CHECK: import new_module
// CHECK-ALL: error: no such module 'new_module'
// CHECK-ALL: import new_module
// CHECK-ALL: error: cannot find 'new_module' in scope
// CHECK-ALL: new_module.foo()

import new_module

new_module.foo()
